--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,13 @@
         tools:ignore="UnusedAttribute">
 
         <activity
+            android:name=".GerryLiveActivity"
+            android:label="@string/title_activity_gerry_live"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
             android:name=".GerryMainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login" />
@@ -54,7 +57,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
