--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,11 @@
         android:roundIcon="@drawable/g_small"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true"
-        tools:ignore="UnusedAttribute">
-
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".PlayEventActivity"
+            android:label="@string/title_activity_play_event"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".GerryLiveActivity"
             android:label="@string/title_activity_gerry_live"
