--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,30 +6,36 @@ apply plugin: 'com.google.gms.google-services'
 
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
     buildToolsVersion '30.0.2'
 
     defaultConfig {
         applicationId "com.tmeinc.gerrymonitor"
         minSdkVersion 22
-        targetSdkVersion 29
-        versionCode 20081413
-        versionName '0.0.7.pre'
+        targetSdkVersion 30
+        versionCode 20081811
+        versionName '0.0.7'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
         release {
-            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.4.0'
+
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-core:${kotlinxSerializationCoreVersion}") // JVM dependency
+
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -44,9 +50,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:19.3.1'
     implementation 'com.google.firebase:firebase-messaging:20.2.4'
     implementation 'androidx.preference:preference:1.1.1'
+    implementation 'androidx.security:security-crypto:1.1.0-alpha02'
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-rc03'
 
 }
