--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,6 @@
-ext {
-    kotlinxSerializationCoreVersion = '1.0.0-RC'
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.4.0'
+    ext.kotlin_version = '1.4.10'
     repositories {
         google()
         jcenter()
